# esp32

./: .gitignore
Installation/: README.md
blogs/: Dev_Journal.md  Ultrasonic_Sensor_Library.md  project_planning.md
component_libraries/ultrasonic/: ultrasonic.c  ultrasonic.h
component_libraries/ultrasonic/include/: my_ultrasonic.h
distance_sensor/sensor/: CMakeLists.txt
distance_sensor/sensor/components/ultrasonic/: CMakeLists.txt
distance_sensor/sensor/components/ultrasonic/include/: ultrasonic.h
distance_sensor/sensor/main/: CMakeLists.txt  main.c
distance_sensor/softAp/main/: main.c  root.html
docs/: ESP_IDF_Docs.md  idf-monitor-cheatsheet.md  idf-monitor-cheatsheet.rst  install.sh
i2c_master/: CMakeLists.txt
i2c_master/main/: main.c  main_old.c
infoGet/main/: main.c
master_menu/: CMakeLists.txt  sdkconfig
master_menu/components/screen_menu/: screen_menu.c
master_menu/main/: main.c
node_listener/: sdkconfig.old
node_listener/main/: main.c  main_old.c
practice/main/: test_i2c_board.h
practice_projects/component_libraries/ultrasonic/: CMakeLists.txt
practice_projects/i2c_master/main/: main.c
practice_projects/infoGet/: CMakeLists.txt
practice_projects/infoGet/main/: CMakeLists.txt
practice_projects/node_listener/: CMakeLists.txt
practice_projects/practice/: CMakeLists.txt
practice_projects/templateProject/: README.md
templateProject/: CMakeLists.txt
ultrasonic_device/: CMakeLists.txt
ultrasonic_device/main/: CMakeLists.txt  main.c
ultrasonic_test/: CMakeLists.txt
ultrasonic_test/main/: main.c
(+14 files in other folders)
